<resources>
    <string name="app_name">Lista de Livros</string>
    <string name="lista_de_livros">Lista de Livros</string>
    <string name="registre_se">Registre-se</string>
    <string name="insira_um_e_mail">Insira um E-mail</string>
    <string name="insira_uma_senha">Insira uma Senha</string>
    <string name="confirme_a_senha">Confirme a Senha</string>
    <string name="registrar">Registrar</string>
    <string name="ja_possui_uma_conta_fa_a_login">Ja possui uma conta? Faça login</string>
    <string name="fa_a_seu_login">Faça seu Login</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_n_o_possui_uma_conta_registre_se">Ainda não possui uma conta? Registre-se</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="deletar_usu_rio">Deletar Usuário</string>
    <string name="sair_da_conta">Sair da Conta</string>
    <string name="edi_o">Edição</string>
    <string name="novo_e_mail">Novo E-mail</string>
    <string name="editar_e_mail">Editar E-mail</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="editar_senha">Editar Senha</string>
    <string name="cancelar_edi_o">Cancelar Edição</string>
    <string name="cadastrar_livro">Cadastrar Livro</string>
    <string name="ver_livros_cadastrados">Ver Livros Cadastrados</string>
    <string name="t_tulo">Título</string>
    <string name="editora">Editora</string>
    <string name="g_nero">Gênero</string>
    <string name="sinopse">Sinopse</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="editar_livro">Editar Livro</string>
    <string name="insira_um_nome_de_usu_rio">Insira um Nome de Usuário</string>
    <string name="nome">Nome</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="editar_nome">Editar Nome</string>
    <string name="voltar">Voltar</string>
</resources>