<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarPerfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edi_o"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/lavander">
    </TextView>

    <ImageView
        android:id="@+id/imagem_perfil_editar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_person_24">
    </ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/email_perfil_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo_e_mail"
            android:layout_marginTop="30dp"
            android:textSize="35sp">
        </EditText>

        <Button
            android:id="@+id/button_editar_email"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/editar_e_mail">
        </Button>

        <EditText
            android:id="@+id/senha_perfil_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_senha"
            android:layout_marginTop="10dp"
            android:textSize="35sp">
        </EditText>

        <Button
            android:id="@+id/button_editar_senha"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/editar_senha">
        </Button>


    </LinearLayout>

    <TextView
        android:id="@+id/cancelar_edicao"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/cancelar_edi_o"
        android:textSize="20sp">
    </TextView>


</LinearLayout>