<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_a_seu_login"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textSize="40sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:hint="@string/e_mail">
            </EditText>

            <EditText
                android:id="@+id/login_senha"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/senha">
            </EditText>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:text="@string/entrar">
            </Button>

            <TextView
                android:id="@+id/registro_redirecionamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="@string/ainda_n_o_possui_uma_conta_registre_se">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>