<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_livro"
            android:gravity="center"
            android:textSize="40sp">
        </TextView>

        <ImageView
            android:id="@+id/imagem_livro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_menu_book_24">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:hint="@string/t_tulo"
                android:gravity="center">
            </EditText>

            <EditText
                android:id="@+id/editora"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/editora"
                android:gravity="center">
            </EditText>

            <EditText
                android:id="@+id/genero"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/g_nero"
                android:gravity="center">
            </EditText>

            <EditText
                android:id="@+id/sinopse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/sinopse"
                android:gravity="center">
            </EditText>

            <Button
                android:id="@+id/button_confirmar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:text="Confirmar">
            </Button>

            <Button
                android:id="@+id/button_cancelar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:text="@string/cancelar">
            </Button>

        </LinearLayout>

    </LinearLayout>

</ScrollView>