<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilActivity"
    android:layout_marginTop="50dp">

    <ImageView
        android:id="@+id/imagem_perfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_person_24">
    </ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="35sp">
        </TextView>

        <TextView
            android:id="@+id/senha_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="35sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/button_editar"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/editar_perfil">
            </Button>

            <Button
                android:id="@+id/button_deletar"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/deletar_usu_rio">
            </Button>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_voltar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_arrow_back_24">
    </ImageView>

    <TextView
        android:id="@+id/Desconectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sair_da_conta">
    </TextView>

</LinearLayout>