<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagem_livro"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_menu_book_24">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:hint="@string/t_tulo"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/editora"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/editora"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/genero"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/g_nero"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/sinopse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/sinopse"
                android:gravity="center">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/button_editar"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:text="@string/editar">
                </Button>

                <Button
                    android:id="@+id/button_deletar"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:text="@string/deletar">
                </Button>

            </LinearLayout>

            <ImageView
                android:id="@+id/image_voltar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center">
            </ImageView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>